--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Eat-Da-Burger! Node Express Handlebars",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,8 @@
     "env": "0.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mysql": "^2.17.1"
-  }
+    "mysql": "^2.17.1",
+    "orm": "^5.0.4"
+  },
+  "devDependencies": {}
 }
